<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.element.fragments.ImageFragment">

    <Button
        android:id="@+id/imageCameraButton"
        style="@style/MarginNoBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/image_camera_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageImageView"
        style="@style/MarginAll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_picture_description"
        app:layout_constraintBottom_toTopOf="@+id/imageSaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCameraButton"
        tools:src="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/imageSaveButton"
        style="@style/MarginNoTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/all_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
