<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.element.fragments.MovieFragment">

    <ProgressBar
        android:id="@+id/movieProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/movieGenerateButton"
        style="@style/MarginNoBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_generate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/movieImageView"
        style="@style/MarginNoBottom"
        android:layout_width="0dp"
        android:layout_height="@dimen/all_image_height"
        android:contentDescription="@string/movie_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieGenerateButton"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movieTitleTextView"
        style="@style/MarginNoBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/text_24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieImageView"
        tools:text="Inception" />

    <RatingBar
        android:id="@+id/movieRatingBar"
        style="@style/MarginNoBottom.Indicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:numStars="10"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieTitleTextView"
        tools:visibility="visible" />

    <Button
        android:id="@+id/movieSaveButton"
        style="@style/MarginNoTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/all_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
